--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
 body {
-    background: burlywood;
-}
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f015;
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1 {
+    color: #333;
+    text-align: center;
+  }
+  
+  ul {
+    list-style-type: disc;
+    margin-left: 20px;
+  }
+  
+  li {
+    margin-bottom: 10px;
+  }
+  
+  p {
+    line-height: 1.5;
+    margin-bottom: 15px;
+  }
