--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f015;
+    background-color: #f1f5f2de;
     margin: 0;
     padding: 0;
   }
   h1 {
     color: #333;
-    text-align: center;
+    text-align: left;
   }
   ul {
     list-style-type: disc;
