--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Courier, sans-serif;
     background-color: #f1f5f2de;
     margin: 0;
     padding: 0;
