--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Courier New', Courier, monospace, sans-serif;
+    font-family: courier, courier new, serif;
     background-color: #f1f5f2de;
     margin: 0;
     padding: 0;
