--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: courier, courier new, serif;
+    font-family: "Courier New", Courier, monospace;
     background-color: #f1f5f2de;
     margin: 0;
     padding: 0;
